tests/snapshots/snapshots__rust_sample_snapshot.snap
---
source: tests/snapshots.rs
expression: output
---
sample.rs:
  pub fn process :2
  fn helper :6
  pub struct Token :8
  pub enum TokenKind :13
  pub trait Visitor :19
  pub fn visit_token :20
  pub fn visit_all :21
  impl std::fmt::Display for Token :28
  pub fn fmt :29
  impl Token :34
  pub fn new :35
  pub type Span :40
  const MAX_TOKENS :42
  pub static VERSION :44
  macro token :46
  pub mod lexer :52
