tests/snapshots/snapshots__self_snapshot.snap
---
source: tests/snapshots.rs
expression: output
---
format.rs:
  fn format_symbol :6
  pub fn format_file_symbols :12
  pub fn format_directory :28
lib.rs:
  pub mod format :1
  pub mod parse :2
  pub mod walk :3
main.rs:
  struct Cli :7
  fn main :16
parse.rs:
  pub struct Symbol :7
  pub enum SymbolKind :17
  impl std::fmt::Display for SymbolKind :32
  fn fmt :33
  fn language_for_extension :52
  pub fn extract_symbols :71
  fn is_public_symbol :168
  fn is_inside_function :203
  fn impl_name :222
  fn has_preceding_attribute :237
  fn is_rust_test_code :255
walk.rs:
  const SOURCE_EXTENSIONS :5
  pub fn discover_source_files :18
  fn is_source_file :30
  fn is_test_file :38
