tests/snapshots/snapshots__single_file_rust_level1.snap
---
source: tests/snapshots.rs
expression: output
---
lib.rs
    22→pub mod serde_untagged
    25→pub mod serde_untagged_optional
    49→pub enum Either
   149→    fn clone
   156→    fn clone_from
   175→    pub fn is_left
   191→    pub fn is_right
   206→    pub fn left
   224→    pub fn right
   242→    pub fn as_ref
   264→    pub fn as_mut
   270→    pub fn as_pin_ref
   278→    pub fn as_pin_mut
   298→    pub fn flip
   317→    pub fn map_left
   339→    pub fn map_right
   366→    pub fn map_either
   397→    pub fn map_either_with
   424→    pub fn either
   454→    pub fn either_with
   476→    pub fn left_and_then
   497→    pub fn right_and_then
   521→    pub fn into_iter
   544→    pub fn iter
   573→    pub fn iter_mut
   597→    pub fn factor_into_iter
   619→    pub fn factor_iter
   645→    pub fn factor_iter_mut
   671→    pub fn left_or
   690→    pub fn left_or_default
   712→    pub fn left_or_else
   738→    pub fn right_or
   757→    pub fn right_or_default
   779→    pub fn right_or_else
   809→    pub fn unwrap_left
   841→    pub fn unwrap_right
   871→    pub fn expect_left
   901→    pub fn expect_right
   923→    pub fn either_into
   944→    pub fn factor_none
   966→    pub fn factor_err
   988→    pub fn factor_ok
  1009→    pub fn factor_first
  1030→    pub fn factor_second
  1050→    pub fn into_inner
  1065→    pub fn map
  1076→    pub fn cloned
  1086→    pub fn copied
  1098→    pub fn cloned
  1108→    pub fn copied
  1119→    fn from
  1129→    fn from
  1143→    type Output
  1145→    fn poll
  1162→    fn read
  1166→    fn read_exact
  1170→    fn read_to_end
  1174→    fn read_to_string
  1188→    fn seek
  1200→    fn fill_buf
  1204→    fn consume
  1208→    fn read_until
  1212→    fn read_line
  1226→    fn write
  1230→    fn write_all
  1234→    fn write_fmt
  1238→    fn flush
  1248→    fn as_ref
  1297→    fn as_ref
  1307→    fn as_mut
  1317→    fn as_mut
  1327→    type Target
  1329→    fn deref
  1339→    fn deref_mut
  1353→    fn source
  1358→    fn description
  1363→    fn cause
  1373→    fn fmt
  1383→    fn write_str
  1387→    fn write_char
  1391→    fn write_fmt
