tests/snapshots/snapshots__single_file_rust_level2.snap
---
source: tests/snapshots.rs
expression: output
---
lib.rs
    22→pub mod serde_untagged;
    25→pub mod serde_untagged_optional;
    49→pub enum Either<L, R> {
    81→macro_rules! for_both {
   113→macro_rules! try_left {
   124→macro_rules! try_right {
   133→macro_rules! map_either {
   142→mod iterator;
   145→mod into_either;
   148→impl<L: Clone, R: Clone> Clone for Either<L, R> {
   149→    fn clone(&self) -> Self {
   156→    fn clone_from(&mut self, source: &Self) {
   165→impl<L, R> Either<L, R> {
   175→    pub fn is_left(&self) -> bool {
   191→    pub fn is_right(&self) -> bool {
   206→    pub fn left(self) -> Option<L> {
   224→    pub fn right(self) -> Option<R> {
   242→    pub fn as_ref(&self) -> Either<&L, &R> {
   264→    pub fn as_mut(&mut self) -> Either<&mut L, &mut R> {
   270→    pub fn as_pin_ref(self: Pin<&Self>) -> Either<Pin<&L>, Pin<&R>> {
   278→    pub fn as_pin_mut(self: Pin<&mut Self>) -> Either<Pin<&mut L>, Pin<&mut R>> {
   298→    pub fn flip(self) -> Either<R, L> {
   317→    pub fn map_left<F, M>(self, f: F) -> Either<M, R>
   318→    where
   319→        F: FnOnce(L) -> M,
   320→    {
   339→    pub fn map_right<F, S>(self, f: F) -> Either<L, S>
   340→    where
   341→        F: FnOnce(R) -> S,
   342→    {
   366→    pub fn map_either<F, G, M, S>(self, f: F, g: G) -> Either<M, S>
   367→    where
   368→        F: FnOnce(L) -> M,
   369→        G: FnOnce(R) -> S,
   370→    {
   397→    pub fn map_either_with<Ctx, F, G, M, S>(self, ctx: Ctx, f: F, g: G) -> Either<M, S>
   398→    where
   399→        F: FnOnce(Ctx, L) -> M,
   400→        G: FnOnce(Ctx, R) -> S,
   401→    {
   424→    pub fn either<F, G, T>(self, f: F, g: G) -> T
   425→    where
   426→        F: FnOnce(L) -> T,
   427→        G: FnOnce(R) -> T,
   428→    {
   454→    pub fn either_with<Ctx, F, G, T>(self, ctx: Ctx, f: F, g: G) -> T
   455→    where
   456→        F: FnOnce(Ctx, L) -> T,
   457→        G: FnOnce(Ctx, R) -> T,
   458→    {
   476→    pub fn left_and_then<F, S>(self, f: F) -> Either<S, R>
   477→    where
   478→        F: FnOnce(L) -> Either<S, R>,
   479→    {
   497→    pub fn right_and_then<F, S>(self, f: F) -> Either<L, S>
   498→    where
   499→        F: FnOnce(R) -> Either<L, S>,
   500→    {
   521→    pub fn into_iter(self) -> Either<L::IntoIter, R::IntoIter>
   522→    where
   523→        L: IntoIterator,
   524→        R: IntoIterator<Item = L::Item>,
   525→    {
   544→    pub fn iter(&self) -> Either<<&L as IntoIterator>::IntoIter, <&R as IntoIterator>::IntoIter>
   545→    where
   546→        for<'a> &'a L: IntoIterator,
   547→        for<'a> &'a R: IntoIterator<Item = <&'a L as IntoIterator>::Item>,
   548→    {
   573→    pub fn iter_mut(
   574→        &mut self,
   575→    ) -> Either<<&mut L as IntoIterator>::IntoIter, <&mut R as IntoIterator>::IntoIter>
   576→    where
   577→        for<'a> &'a mut L: IntoIterator,
   578→        for<'a> &'a mut R: IntoIterator<Item = <&'a mut L as IntoIterator>::Item>,
   579→    {
   597→    pub fn factor_into_iter(self) -> IterEither<L::IntoIter, R::IntoIter>
   598→    where
   599→        L: IntoIterator,
   600→        R: IntoIterator,
   601→    {
   619→    pub fn factor_iter(
   620→        &self,
   621→    ) -> IterEither<<&L as IntoIterator>::IntoIter, <&R as IntoIterator>::IntoIter>
   622→    where
   623→        for<'a> &'a L: IntoIterator,
   624→        for<'a> &'a R: IntoIterator,
   625→    {
   645→    pub fn factor_iter_mut(
   646→        &mut self,
   647→    ) -> IterEither<<&mut L as IntoIterator>::IntoIter, <&mut R as IntoIterator>::IntoIter>
   648→    where
   649→        for<'a> &'a mut L: IntoIterator,
   650→        for<'a> &'a mut R: IntoIterator,
   651→    {
   671→    pub fn left_or(self, other: L) -> L {
   690→    pub fn left_or_default(self) -> L
   691→    where
   692→        L: Default,
   693→    {
   712→    pub fn left_or_else<F>(self, f: F) -> L
   713→    where
   714→        F: FnOnce(R) -> L,
   715→    {
   738→    pub fn right_or(self, other: R) -> R {
   757→    pub fn right_or_default(self) -> R
   758→    where
   759→        R: Default,
   760→    {
   779→    pub fn right_or_else<F>(self, f: F) -> R
   780→    where
   781→        F: FnOnce(L) -> R,
   782→    {
   809→    pub fn unwrap_left(self) -> L
   810→    where
   811→        R: core::fmt::Debug,
   812→    {
   841→    pub fn unwrap_right(self) -> R
   842→    where
   843→        L: core::fmt::Debug,
   844→    {
   871→    pub fn expect_left(self, msg: &str) -> L
   872→    where
   873→        R: core::fmt::Debug,
   874→    {
   901→    pub fn expect_right(self, msg: &str) -> R
   902→    where
   903→        L: core::fmt::Debug,
   904→    {
   923→    pub fn either_into<T>(self) -> T
   924→    where
   925→        L: Into<T>,
   926→        R: Into<T>,
   927→    {
   932→impl<L, R> Either<Option<L>, Option<R>> {
   944→    pub fn factor_none(self) -> Option<Either<L, R>> {
   952→impl<L, R, E> Either<Result<L, E>, Result<R, E>> {
   966→    pub fn factor_err(self) -> Result<Either<L, R>, E> {
   974→impl<T, L, R> Either<Result<T, L>, Result<T, R>> {
   988→    pub fn factor_ok(self) -> Result<T, Either<L, R>> {
   996→impl<T, L, R> Either<(T, L), (T, R)> {
  1009→    pub fn factor_first(self) -> (T, Either<L, R>) {
  1017→impl<T, L, R> Either<(L, T), (R, T)> {
  1030→    pub fn factor_second(self) -> (Either<L, R>, T) {
  1038→impl<T> Either<T, T> {
  1050→    pub fn into_inner(self) -> T {
  1065→    pub fn map<F, M>(self, f: F) -> Either<M, M>
  1066→    where
  1067→        F: FnOnce(T) -> M,
  1068→    {
  1073→impl<L, R> Either<&L, &R> {
  1076→    pub fn cloned(self) -> Either<L, R>
  1077→    where
  1078→        L: Clone,
  1079→        R: Clone,
  1080→    {
  1086→    pub fn copied(self) -> Either<L, R>
  1087→    where
  1088→        L: Copy,
  1089→        R: Copy,
  1090→    {
  1095→impl<L, R> Either<&mut L, &mut R> {
  1098→    pub fn cloned(self) -> Either<L, R>
  1099→    where
  1100→        L: Clone,
  1101→        R: Clone,
  1102→    {
  1108→    pub fn copied(self) -> Either<L, R>
  1109→    where
  1110→        L: Copy,
  1111→        R: Copy,
  1112→    {
  1118→impl<L, R> From<Result<R, L>> for Either<L, R> {
  1119→    fn from(r: Result<R, L>) -> Self {
  1128→impl<L, R> From<Either<L, R>> for Result<R, L> {
  1129→    fn from(val: Either<L, R>) -> Self {
  1138→impl<L, R> Future for Either<L, R>
  1143→    type Output = L::Output;
  1145→    fn poll(
  1146→        self: Pin<&mut Self>,
  1147→        cx: &mut core::task::Context<'_>,
  1148→    ) -> core::task::Poll<Self::Output> {
  1157→impl<L, R> Read for Either<L, R>
  1162→    fn read(&mut self, buf: &mut [u8]) -> io::Result<usize> {
  1166→    fn read_exact(&mut self, buf: &mut [u8]) -> io::Result<()> {
  1170→    fn read_to_end(&mut self, buf: &mut std::vec::Vec<u8>) -> io::Result<usize> {
  1174→    fn read_to_string(&mut self, buf: &mut std::string::String) -> io::Result<usize> {
  1183→impl<L, R> Seek for Either<L, R>
  1188→    fn seek(&mut self, pos: SeekFrom) -> io::Result<u64> {
  1195→impl<L, R> BufRead for Either<L, R>
  1200→    fn fill_buf(&mut self) -> io::Result<&[u8]> {
  1204→    fn consume(&mut self, amt: usize) {
  1208→    fn read_until(&mut self, byte: u8, buf: &mut std::vec::Vec<u8>) -> io::Result<usize> {
  1212→    fn read_line(&mut self, buf: &mut std::string::String) -> io::Result<usize> {
  1221→impl<L, R> Write for Either<L, R>
  1226→    fn write(&mut self, buf: &[u8]) -> io::Result<usize> {
  1230→    fn write_all(&mut self, buf: &[u8]) -> io::Result<()> {
  1234→    fn write_fmt(&mut self, fmt: fmt::Arguments<'_>) -> io::Result<()> {
  1238→    fn flush(&mut self) -> io::Result<()> {
  1243→impl<L, R, Target> AsRef<Target> for Either<L, R>
  1248→    fn as_ref(&self) -> &Target {
  1253→macro_rules! impl_specific_ref_and_mut {
  1292→impl<L, R, Target> AsRef<[Target]> for Either<L, R>
  1297→    fn as_ref(&self) -> &[Target] {
  1302→impl<L, R, Target> AsMut<Target> for Either<L, R>
  1307→    fn as_mut(&mut self) -> &mut Target {
  1312→impl<L, R, Target> AsMut<[Target]> for Either<L, R>
  1317→    fn as_mut(&mut self) -> &mut [Target] {
  1322→impl<L, R> Deref for Either<L, R>
  1327→    type Target = L::Target;
  1329→    fn deref(&self) -> &Self::Target {
  1334→impl<L, R> DerefMut for Either<L, R>
  1339→    fn deref_mut(&mut self) -> &mut Self::Target {
  1348→impl<L, R> Error for Either<L, R>
  1353→    fn source(&self) -> Option<&(dyn Error + 'static)> {
  1358→    fn description(&self) -> &str {
  1363→    fn cause(&self) -> Option<&dyn Error> {
  1368→impl<L, R> fmt::Display for Either<L, R>
  1373→    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
  1378→impl<L, R> fmt::Write for Either<L, R>
  1383→    fn write_str(&mut self, s: &str) -> fmt::Result {
  1387→    fn write_char(&mut self, c: char) -> fmt::Result {
  1391→    fn write_fmt(&mut self, args: fmt::Arguments<'_>) -> fmt::Result {
  1522→macro_rules! check_t {
  1536→fn _unsized_ref_propagation() {
  1553→fn _unsized_std_propagation() {
