tests/snapshots/snapshots__toml_sample_budget_10000.snap
---
source: tests/snapshots.rs
expression: output
---
Cargo.toml
     1→[package]
     2→name = "example"
     3→version = "0.1.0"
     4→edition = "2021"
     5→description = "An example Rust crate"
     6→
     7→[dependencies]
     8→serde = { version = "1", features = ["derive"] }
     9→tokio = { version = "1.0", features = ["full"] }
    10→clap = "4"
    11→
    12→[dev-dependencies]
    13→insta = "1.0"
    14→tempfile = "3"
    15→
    16→[profile.release]
    17→opt-level = 3
    18→lto = true
    19→strip = true
    20→
    21→[[bin]]
    22→name = "example"
    23→path = "src/main.rs"
    24→
    25→[workspace.metadata.release]
    26→publish = false
