tests/snapshots/snapshots__toml_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
Cargo.toml
     1→[package]
     7→[dependencies]
    12→[dev-dependencies]
    16→[profile.release]
    17→opt-level = 3
    18→lto = true
    19→strip = true
    20→
    21→[[bin]]
    25→[workspace.metadata.release]
    26→publish = false
