tests/snapshots/snapshots__toml_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
Cargo.toml
     1→[package]
     7→[dependencies]
    12→[dev-dependencies]
    16→[profile.release]
    21→[[bin]]
