tests/snapshots/snapshots__tsx_sample_budget_10000.snap
---
source: tests/snapshots.rs
expression: output
---
sample.tsx
     4→/** Props for the Button component. */
     5→export interface ButtonProps …
    12→ * A clickable button component.
    13→ * @param props - The button props.
    15→export function Button({ label, onClick, disabled }: ButtonProps) {
    16→    return <button onClick={onClick} disabled={disabled}>{label}</button>;
    17→}
    19→export const IconButton = ({ icon, ...rest }: { icon: string } & ButtonProps) => {
    20→    return <Button label={icon} {...rest} />;
    21→};
    23→function useToggle(initial: boolean): [boolean, () => void] {
    24→    const [value, setValue] = useState(initial);
    25→    return [value, () => setValue(v => !v)];
    26→}
    28→/** A forwarded-ref input component. */
    29→export const Input = forwardRef<HTMLInputElement, React.InputHTMLAttributes<HTMLInputElement>>(
    30→    (props, ref) => {
    31→        return <input ref={ref} {...props} />;
    32→    }
    33→);
    35→export type Theme = "light" | "dark";
    37→export const MemoizedList = React.memo(function MemoizedList({ items }: { items: string[] }) {
    38→    return <ul>{items.map(i => <li key={i}>{i}</li>)}</ul>;
    39→});
    41→export default function App() {
    42→    const [on, toggle] = useToggle(false);
    43→    return (
    44→        <div>
    45→            <Button label={on ? "On" : "Off"} onClick={toggle} />
    46→        </div>
    47→    );
    48→}
