tests/snapshots/snapshots__tsx_sample_budget_20.snap
---
source: tests/snapshots.rs
expression: output
---
sample.tsx
    15→export function Button …
