tests/snapshots/snapshots__tsx_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
sample.tsx
     4→/** Props for the Button component. */
     5→export interface ButtonProps …
    12→ * A clickable button component.
    13→ * @param props - The button props.
    15→export function Button({ label, onClick, disabled }: ButtonProps) {
    19→export const IconButton = ({ icon, ...rest }: { icon: string } & ButtonProps) => {
    23→function useToggle(initial: boolean): [boolean, () => void] {
    28→/** A forwarded-ref input component. */
    29→export const Input …
    35→export type Theme …
    37→export const MemoizedList …
    41→export default function App() {
